--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "communite_helper",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "process communite, can use tcp, socket.io or subprocess",
   "main": "index.js",
   "scripts": {
-    "test": "bash ./test/test.bash"
+    "test": "./test/test"
   },
   "author": "xian",
   "license": "ISC"
