--- a/package.json
+++ b/package.json
@@ -2,10 +2,25 @@
   "name": "communite_helper",
   "version": "1.4.0",
   "description": "process communite, can use tcp, socket.io or subprocess",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
-    "test": "./test/test"
+    "test": "./test/test",
+    "postinstall": "tsc",
+    "build": "tsc",
+    "coverage": "nyc npm run test"
   },
-  "author": "xian",
-  "license": "ISC"
+  "author": "karta0807913",
+  "license": "ISC",
+  "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.3.0",
+    "@types/ws": "^7.4.6",
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
+    "typescript": "^4.3.5"
+  },
+  "devDependencies": {
+    "nyc": "^15.1.0",
+    "ts-node": "^10.0.0"
+  }
 }
