--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "communite_helper",
   "version": "1.4.0",
-  "description": "process communite, can use tcp, socket.io or subprocess",
+  "description": "process communite. support express, native http server, socket.io, websocket or subprocess",
   "main": "build/index.js",
   "scripts": {
     "test": "./test/test",
@@ -15,12 +15,12 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.3.0",
     "@types/ws": "^7.4.6",
-    "socket.io": "^4.1.3",
-    "socket.io-client": "^4.1.3",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
     "nyc": "^15.1.0",
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
     "ts-node": "^10.0.0"
   }
 }
