--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.3.0",
     "@types/ws": "^7.4.6",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3"
   },
   "devDependencies": {
     "nyc": "^15.1.0",
-    "socket.io": "^4.1.3",
-    "socket.io-client": "^4.1.3",
     "ts-node": "^10.0.0"
   }
 }
