--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,14 @@
         "allowJs": true,
         "declaration": true,
         "module": "commonjs",
+        "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "noUncheckedIndexedAccess": true,
+        "noImplicitOverride": true,
+        "noPropertyAccessFromIndexSignature": true,
         "target": "es6"
     },
     "include": [
