--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
         "allowJs": true,
         "declaration": true,
         "module": "commonjs",
+        "declaration": true,
+        "declarationMap": true,
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
