--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^16.3.0",
-    "@types/ws": "^7.4.6",
-    "typescript": "^4.3.5",
-    "socket.io": "^4.1.3",
-    "socket.io-client": "^4.1.3"
+    "@types/node": "^16.7.8",
+    "@types/ws": "^7.4.7",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0",
+    "typescript": "^4.4.2"
   },
   "devDependencies": {
     "nyc": "^15.1.0",
-    "ts-node": "^10.0.0"
+    "ts-node": "^10.2.1"
   }
 }
